--- a/passcure login page/index.html
+++ b/passcure login page/index.html
@@ -45,7 +45,7 @@
     <main>
       <div class="container">
         <h2>login</h2>
-        <form action="POST">
+        <form action="#" method='POST'>
           <label for="email"
             >email <input type="email" name="email" id="email" class="inline"
           /></label>
